# llm-zoomcamp-2026

./: .env  .gitignore  README.md  pyproject.toml
homework/hw1/: hw1.ipynb  rag_helper.py
llm-zoomcamp-01/: faq.db-shm  faq.db-wal  ingestion.ipynb  notebook.ipynb  persistent_rag.ipynb  rag_helper.py  rag_updated.ipynb
llm-zoomcamp-02/: hw.ipynb  main.py  notebook.ipynb  pyproject.toml
llm-zoomcamp-03/homework/: README.md
llm-zoomcamp-03/homework/script/: 1-chatgpt-kestra-workflow.yaml  1-kestra-aicopilot-workflow.yaml
llm-zoomcamp-04/: homework.ipynb  notebook.ipynb
llm-zoomcamp-04/data/: ground_truth-new.csv  rag-answers-new.csv  rag-evaluations-new.csv
llm-zoomcamp-04/homework/: hw.ipynb
llm-zoomcamp-05/: app.py  assistant.py  db_init.py  db_query.py  generate_data.py  ingest.py  metrics.py  rag_helper.py
llm-zoomcamp-05/homework/: main.py  pyproject.toml  rag_helper.py  rag_trace.py  sqlite_query.py  starter.py  traces.db
