[project]
name = "llm-zoomcamp-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitsource>=0.0.5",
    "google-genai>=2.9.0",
    "jupyter>=1.1.1",
    "minsearch>=0.1.1",
    "onnxruntime>=1.27.0",
    "openai>=2.43.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "sqlitesearch>=0.1.1",
    "tqdm>=4.68.3",
]
